objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBC2_Description__c</fullName>
        <description>This field captures the description/name of CBC2 code value.</description>
        <inlineHelpText>This field captures the description/name of CBC2 code value.</inlineHelpText>
        <label>CBC2 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC2__c</fullName>
        <description>Data coming from TED/SFI Staging Table. Top level of identifying products.</description>
        <label>CBC2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Description__c</fullName>
        <description>This field captures the description/name of CBC3 code value.</description>
        <inlineHelpText>This field captures the description/name of CBC3 code value.</inlineHelpText>
        <label>CBC3 Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3__c</fullName>
        <description>Data coming from TED/SFI Staging Table. Second level of identifying products.</description>
        <label>CBC3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC4__c</fullName>
        <description>Data coming from TED/SFI Staging Table. Third level of identifying products.</description>
        <label>CBC4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>SURESH CAN WE DELETE THIS?
Long-text area for end-users to input comments data,
OR
Could potentially not be needed as Notes &amp; Attachments on Forecast could be use to keep track of user comments related to Account&apos;s specific Forecast</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>District_Description__c</fullName>
        <description>This field captures the description/name of District/Area code value.</description>
        <inlineHelpText>This field captures the description/name of District/Area code value.</inlineHelpText>
        <label>District Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Reason__c</fullName>
        <description>This field is to identify the text if an Account is moving from Portfolio to Non-Portfolio, or vice-versa, when the Pareto Process runs every year around the beginning of every Fiscal Year (~Oct.)</description>
        <inlineHelpText>This field is to identify the text if an Account is moving from Portfolio to Non-Portfolio, or vice-versa, when the Pareto Process runs every year around the beginning of every Fiscal Year (~Oct.)</inlineHelpText>
        <label>Exception Reason?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID that will allow for integration purposes.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Forecast_Level__c</fullName>
        <description>Picklist identifying what level of forecast specific Account Forecast is being forecast on.</description>
        <label>Forecast Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Part Level</fullName>
                </value>
                <value>
                    <fullName>GPL Level</fullName>
                </value>
                <value>
                    <fullName>CBC3 Level</fullName>
                </value>
                <value>
                    <fullName>CBC2 Level</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GPL_Desc__c</fullName>
        <formula>GPL__r.GPL_Description__c</formula>
        <label>GPL Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Product Hierarchy. Map to either Salesforce Id or Unique_Key__c on Product Hierarchy.

Data coming from TED/SFI Staging Table. Fourth level of identifying products. Global Product Line.</description>
        <label>GPL</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Forecast_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to identify the manual exception movement of Non-Portfolio Accounts to Portfolio, which occurs infrequently.</description>
        <inlineHelpText>This field is to identify the manual exception movement of Non-Portfolio Accounts to Portfolio, which occurs infrequently.</inlineHelpText>
        <label>Manual Forecast Exception?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profit_Center__c</fullName>
        <label>Profit Center</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Description__c</fullName>
        <description>This field captures the description/name of Region code value.</description>
        <inlineHelpText>This field captures the description/name of Region code value.</inlineHelpText>
        <label>Region Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field captures a 4-digit value, hence
0002 --&gt; NA
0401 --&gt; EMEA
0442 --&gt; AP
0933 --&gt; SA
0934 --&gt; ANZ</description>
        <inlineHelpText>For Market Adjustment manual entry, please enter the 4-digit value based on key below.
0002 --&gt; NA
0401 --&gt; EMEA
0442 --&gt; AP
0933 --&gt; SA
0934 --&gt; ANZ</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is NOT part of any Forecast page layouts. This field is used for &quot;ADM_EntryScreen&quot; visualforce page to filter &quot;OEM&quot; records.</description>
        <label>Sold-To-Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.DD1_Industry_Business_Code__c</field>
                <operation>notEqual</operation>
                <value>071</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts (Sold-To-Customer)</relationshipLabel>
        <relationshipName>Forecasts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This picklist will help identify if Forecast record is Portfolio, Non-Portfolio or Market Adjustment. Picklist value visibility will be controlled by Record Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Portfolio</fullName>
                </value>
                <value>
                    <fullName>Non-Portfolio</fullName>
                </value>
                <value>
                    <fullName>Market Adjustment</fullName>
                </value>
                <value>
                    <fullName>Opportunity Forecast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Worldwide_Account_Name__c</fullName>
        <description>This field will be used to capture the Worldwide Account Name coming from SFI Pareto Staging Table.</description>
        <inlineHelpText>This field will be used to capture the Worldwide Account Name coming from SFI Pareto Staging Table.</inlineHelpText>
        <label>Worldwide Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worldwide_Account_Number__c</fullName>
        <description>This field will be used to capture the Worldwide Account Number coming from SFI Pareto Staging Table.</description>
        <inlineHelpText>This field will be used to capture the Worldwide Account Number coming from SFI Pareto Staging Table.</inlineHelpText>
        <label>Worldwide Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worldwide_Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is NOT part of any Forecast page layouts. This field is used for &quot;ADM_EntryScreen&quot; visualforce page to filter &quot;Distributor&quot; records.</description>
        <label>Worldwide Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.DD1_Industry_Business_Code__c</field>
                <operation>equals</operation>
                <value>071</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Forecasts (Worldwide Customer Name)</relationshipLabel>
        <relationshipName>Forecasts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>AccountId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>External_ID__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Forecast_Level__c</columns>
        <columns>CBC3__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Description__c</columns>
        <columns>GPL__c</columns>
        <columns>GPL_Desc__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountId__c</field>
            <operation>contains</operation>
            <value>Safran Electrical &amp; Power</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>AccountId__c</columns>
        <columns>Worldwide_Account_Name__c</columns>
        <columns>Worldwide_Account_Number__c</columns>
        <columns>CBC3__c</columns>
        <columns>CBC3_Description__c</columns>
        <columns>External_ID__c</columns>
        <columns>Sold_To_Customer__c</columns>
        <columns>GPL__c</columns>
        <columns>GPL_Desc__c</columns>
        <columns>Forecast_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AccountId__c</field>
            <operation>equals</operation>
            <value>Airbus Operations SAS</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DISTY_CBC3</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>AccountId__c</columns>
        <columns>Type__c</columns>
        <columns>Forecast_Level__c</columns>
        <columns>CBC2__c</columns>
        <columns>CBC2_Description__c</columns>
        <columns>CBC3__c</columns>
        <columns>CBC3_Description__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Description__c</columns>
        <columns>District__c</columns>
        <columns>District_Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Worldwide_Account_Number__c</field>
            <operation>equals</operation>
            <value>0000296105</value>
        </filters>
        <filters>
            <field>Forecast_Level__c</field>
            <operation>equals</operation>
            <value>CBC3 Level</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Forecast__c.ADM</value>
        </filters>
        <filters>
            <field>CBC3__c</field>
            <operation>equals</operation>
            <value>12302</value>
        </filters>
        <label>DISTY/CBC3</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Market_Adjustment</fullName>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>AccountId__c</columns>
        <columns>Type__c</columns>
        <columns>Forecast_Level__c</columns>
        <columns>CBC2__c</columns>
        <columns>CBC3__c</columns>
        <columns>GPL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Market Adjustment</value>
        </filters>
        <label>Market Adjustment</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FCN-{000}</displayFormat>
        <label>Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <recordTypes>
        <fullName>ADM</fullName>
        <active>true</active>
        <description>Business Unit Specific ADM</description>
        <label>ADM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Energy</fullName>
        <active>true</active>
        <description>Business Unit Specific Energy</description>
        <label>Energy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>